<resources>
    <string name="app_name">AER Calculator</string>
    <string name="contributions_header_text">Contributions</string>
    <string name="compute_aer">Compute AER</string>
    <string name="date">Date:</string>
    <string name="amount">Amount:</string>
    <string name="enter">Enter</string>
    <string name="add_more">Add More</string>
    <string name="value">Value:</string>
    <string name="today">Today:</string>
    <string name="unknown_aer">AER: Unknown</string>
    <string name="aer">AER: %1$.2f%%</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="date_format_parts">%1$02d/%2$02d/%3$d</string>
    <string name="decimal_format">#.##</string>
</resources>
