<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/input_contribution">

    <TextView
        android:text="@string/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/label_date"
        android:labelFor="@+id/input_date"
        android:layout_weight="0.5"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/input_date"
        android:elevation="1dp"
        android:text="@string/enter"
        android:layout_weight="1"/>

    <TextView
        android:text="@string/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/label_amount"
        android:layout_weight="0.5"
        android:layout_marginStart="10dp"/>

    <EditText
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/input_amount"
        android:layout_weight="1"
        android:layout_width="0dp"/>

</TableRow>