<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="liam.aercalculator.MainActivity">

    <TextView
        android:text="@string/contributions_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contributions_header_text"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:layout_alignParentTop="true"/>

    <Button
        android:text="@string/compute_aer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:id="@+id/aer_result"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contributions_table"
        android:layout_below="@+id/contributions_header_text"
        android:layout_alignParentStart="true"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/input_contribution">

            <TextView
                android:text="@string/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/label_date"
                android:labelFor="@+id/input_date"
                android:layout_weight="0.5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/input_date"
                android:elevation="1dp"
                android:text="@string/enter"
                android:layout_weight="1"
                />

            <TextView
                android:text="@string/amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/label_amount"
                android:layout_weight="0.5"
                android:layout_marginStart="10dp"/>

            <EditText
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/input_amount"
                android:layout_weight="1"
                android:layout_width="0dp"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
