<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="liam.aercalculator.AERCalculatorActivity">

    <TextView
        android:text="@string/contributions_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contributions_header_text"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:layout_alignParentTop="true"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contributions_table"
        android:stretchColumns="*"
        android:layout_below="@+id/contributions_header_text"
        android:layout_alignParentStart="true">

        <include layout="@layout/contribution"/>
    </TableLayout>

    <Button
        android:text="@string/add_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_more_button"
        android:layout_below="@+id/contributions_table"
        android:onClick="addContribution"
        android:gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/value_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_value_today"
                android:labelFor="@+id/input_value_today"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value_today"/>

            <EditText
                android:id="@+id/input_value_today"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aer_result"
            android:text="@string/unknown_aer"
            android:layout_below="@+id/value_today"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/compute_aer"
            android:text="@string/compute_aer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="computeAER"
            android:gravity="center_horizontal"
            android:layout_below="@+id/aer_result"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

</RelativeLayout>
